--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 More will come :)
+<figure><embed src="https://wakatime.com/share/@BogdanLivadariu/4f5ce7b7-e86f-4791-9289-5c1a1bb04b1c.svg"></embed></figure>
